--- a/VentUI.ui
+++ b/VentUI.ui
@@ -511,7 +511,7 @@
              </size>
             </property>
             <property name="currentIndex">
-             <number>2</number>
+             <number>0</number>
             </property>
             <widget class="QWidget" name="page">
              <widget class="QDial" name="vtdial">
@@ -910,7 +910,7 @@
              <widget class="QLabel" name="label">
               <property name="geometry">
                <rect>
-                <x>620</x>
+                <x>510</x>
                 <y>0</y>
                 <width>161</width>
                 <height>31</height>
@@ -945,6 +945,27 @@
               </property>
               <property name="text">
                <string>Change</string>
+              </property>
+             </widget>
+             <widget class="QLabel" name="label_alarm">
+              <property name="geometry">
+               <rect>
+                <x>510</x>
+                <y>30</y>
+                <width>161</width>
+                <height>31</height>
+               </rect>
+              </property>
+              <property name="font">
+               <font>
+                <family>Consolas</family>
+                <pointsize>20</pointsize>
+                <weight>50</weight>
+                <bold>false</bold>
+               </font>
+              </property>
+              <property name="text">
+               <string>Alarm : 0</string>
               </property>
              </widget>
             </widget>
