start addding peak pressure display 02

--- a/VentUI.ui
+++ b/VentUI.ui
@@ -910,7 +910,7 @@
              <widget class="QLabel" name="label">
               <property name="geometry">
                <rect>
-                <x>510</x>
+                <x>470</x>
                 <y>0</y>
                 <width>161</width>
                 <height>31</height>
@@ -931,9 +931,9 @@
              <widget class="QPushButton" name="btnchangeset">
               <property name="geometry">
                <rect>
-                <x>420</x>
+                <x>410</x>
                 <y>30</y>
-                <width>75</width>
+                <width>51</width>
                 <height>40</height>
                </rect>
               </property>
@@ -950,7 +950,7 @@
              <widget class="QLabel" name="label_alarm">
               <property name="geometry">
                <rect>
-                <x>510</x>
+                <x>470</x>
                 <y>30</y>
                 <width>161</width>
                 <height>31</height>
@@ -965,7 +965,70 @@
                </font>
               </property>
               <property name="text">
-               <string>Alarm : 0</string>
+               <string>Alarm : </string>
+              </property>
+             </widget>
+             <widget class="QLabel" name="peak_lung">
+              <property name="geometry">
+               <rect>
+                <x>680</x>
+                <y>5</y>
+                <width>161</width>
+                <height>20</height>
+               </rect>
+              </property>
+              <property name="font">
+               <font>
+                <family>Consolas</family>
+                <pointsize>14</pointsize>
+                <weight>50</weight>
+                <bold>false</bold>
+               </font>
+              </property>
+              <property name="text">
+               <string>Lung Peak:</string>
+              </property>
+             </widget>
+             <widget class="QLabel" name="peak_flow">
+              <property name="geometry">
+               <rect>
+                <x>680</x>
+                <y>22</y>
+                <width>161</width>
+                <height>20</height>
+               </rect>
+              </property>
+              <property name="font">
+               <font>
+                <family>Consolas</family>
+                <pointsize>14</pointsize>
+                <weight>50</weight>
+                <bold>false</bold>
+               </font>
+              </property>
+              <property name="text">
+               <string>Flow Peak:</string>
+              </property>
+             </widget>
+             <widget class="QLabel" name="peak_vol">
+              <property name="geometry">
+               <rect>
+                <x>680</x>
+                <y>40</y>
+                <width>161</width>
+                <height>20</height>
+               </rect>
+              </property>
+              <property name="font">
+               <font>
+                <family>Consolas</family>
+                <pointsize>14</pointsize>
+                <weight>50</weight>
+                <bold>false</bold>
+               </font>
+              </property>
+              <property name="text">
+               <string>Vol Peak:</string>
               </property>
              </widget>
             </widget>
