--- a/VentUI.ui
+++ b/VentUI.ui
@@ -932,9 +932,9 @@
               <property name="font">
                <font>
                 <family>Consolas</family>
-                <pointsize>20</pointsize>
-                <weight>75</weight>
-                <bold>true</bold>
+                <pointsize>14</pointsize>
+                <weight>50</weight>
+                <bold>false</bold>
                </font>
               </property>
               <property name="text">
