add dvcurve with flowcurve & checking serial data blanking at lungpressure curve 01

--- a/VentUI.ui
+++ b/VentUI.ui
@@ -524,7 +524,7 @@
              </size>
             </property>
             <property name="currentIndex">
-             <number>0</number>
+             <number>2</number>
             </property>
             <widget class="QWidget" name="page">
              <widget class="QDial" name="vtdial">
@@ -1573,7 +1573,7 @@
                <number>25</number>
               </property>
              </widget>
-             <widget class="QLCDNumber" name="ilcd_2">
+             <widget class="QLCDNumber" name="ilcd_bp">
               <property name="geometry">
                <rect>
                 <x>247</x>
@@ -1654,7 +1654,7 @@
                <string>IE</string>
               </property>
              </widget>
-             <widget class="QLCDNumber" name="ielcd_2">
+             <widget class="QLCDNumber" name="elcd_bp">
               <property name="geometry">
                <rect>
                 <x>267</x>
@@ -1701,7 +1701,7 @@
                <string>RR</string>
               </property>
              </widget>
-             <widget class="QLCDNumber" name="rrlcd_2">
+             <widget class="QLCDNumber" name="rrlcd_bp">
               <property name="enabled">
                <bool>false</bool>
               </property>
@@ -1769,7 +1769,7 @@
                <number>2</number>
               </property>
              </widget>
-             <widget class="QDial" name="ipapdial_2">
+             <widget class="QDial" name="epapdial">
               <property name="geometry">
                <rect>
                 <x>110</x>
@@ -1794,7 +1794,7 @@
                <number>30</number>
               </property>
              </widget>
-             <widget class="QLCDNumber" name="ipaplcd_2">
+             <widget class="QLCDNumber" name="epaplcd">
               <property name="geometry">
                <rect>
                 <x>130</x>
@@ -1825,7 +1825,7 @@
                <number>5</number>
               </property>
              </widget>
-             <widget class="QLabel" name="labelipap_2">
+             <widget class="QLabel" name="labelepap">
               <property name="geometry">
                <rect>
                 <x>120</x>
@@ -1841,19 +1841,41 @@
                <set>Qt::AlignCenter</set>
               </property>
              </widget>
+             <widget class="QLabel" name="colon_bp">
+              <property name="geometry">
+               <rect>
+                <x>260</x>
+                <y>50</y>
+                <width>16</width>
+                <height>21</height>
+               </rect>
+              </property>
+              <property name="font">
+               <font>
+                <pointsize>16</pointsize>
+               </font>
+              </property>
+              <property name="text">
+               <string>:</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
              <zorder>iedial_bipap</zorder>
              <zorder>ipapdial</zorder>
              <zorder>labelipap</zorder>
              <zorder>ipaplcd</zorder>
-             <zorder>ilcd_2</zorder>
+             <zorder>ilcd_bp</zorder>
              <zorder>rrdial_bipap</zorder>
              <zorder>label_18</zorder>
-             <zorder>ielcd_2</zorder>
+             <zorder>elcd_bp</zorder>
              <zorder>label_19</zorder>
-             <zorder>rrlcd_2</zorder>
-             <zorder>ipapdial_2</zorder>
-             <zorder>ipaplcd_2</zorder>
-             <zorder>labelipap_2</zorder>
+             <zorder>rrlcd_bp</zorder>
+             <zorder>epapdial</zorder>
+             <zorder>epaplcd</zorder>
+             <zorder>labelepap</zorder>
+             <zorder>colon_bp</zorder>
             </widget>
             <widget class="QWidget" name="page_4">
              <widget class="QWidget" name="formLayoutWidget">
